[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/outer_space.tres" type="DynamicFont" id=2]
[ext_resource path="res://styles/button_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/button_disabled.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/button.tres" type="StyleBox" id=5]
[ext_resource path="res://fonts/modern_space.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/nasal.tres" type="DynamicFont" id=7]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.490196 )
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
margin_right = 380.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "Paused"
align = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
margin_top = 96.0
margin_right = 380.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Resume Journey"

[node name="Load" type="Button" parent="Panel/VBoxContainer"]
margin_top = 192.0
margin_right = 380.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "Load Journey"

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
margin_top = 288.0
margin_right = 380.0
margin_bottom = 374.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "Save & Quit"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 384.0
margin_right = 380.0
margin_bottom = 470.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Quit Without saving"

[node name="SaveName" type="Label" parent="Panel/VBoxContainer"]
margin_top = 480.0
margin_right = 380.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 7 )
text = "save"
align = 1
[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
